running section add

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="card-1">
                         <div class="ball"></div>
                         <div>
-                            <h2>300+</h2>
+                            <h2>350+</h2>
                             <p>Video tutorial</p>
                         </div>
                     </div>
@@ -48,7 +48,48 @@
         </div>
    </header>
    <main>
-
+        <!-- first section -->
+         <div class="first-section">
+            <div class="round-text">
+                <h1 class="round-title">Change Your Habits</h1>
+                <p class="round-des">Changing a habit involves consciously altering a routine or behavior to achieve a desired outcome.</p>
+            </div>        
+                <div class="round-card">
+                    <div class="cards">
+                        <img class="round-pic" src="images/image 2.png" alt="">
+                        <h4 class="pic-title">Movement</h4>
+                        <p class="round-des">Movement is a celebration of the body's capabilities.</p>
+                    </div>
+                    <div class="cards">
+                        <img class="round-pic" src="images/image 3.png" alt="">
+                        <h4 class="pic-title">Time</h4>
+                        <p class="round-des">Time is one of life’s most precious and fleeting resources.</p>
+                    </div>
+                    <div class="cards">
+                        <img class="round-pic" src="images/image 4.png" alt="">
+                        <h4 class="pic-title">Practice</h4>
+                        <p class="round-des">Practice is the foundation of growth and mastery. </p>
+                    </div>
+                    <div class="cards">
+                        <img class="round-pic" src="images/image 5.png" alt="">
+                        <h4 class="pic-title">Weight Loss</h4>
+                        <p class="round-des">Weight loss is a journey that requires a combination.</p>
+                    </div>
+                </div>
+         </div>
+        <!-- second section -->
+         <div class="second-section">
+            <div class="run-flex">
+                <div class="run-section">
+                    <h1 class="run-title">Run an Extra <br> Mile Easily</h1>
+                    <p class="run-des">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                    <button class="banner-btn">Join Now</button>
+                </div>
+                <div class="run-section run-im">
+                    <img class="run-img" src="images/run.jpg" alt="">
+                </div>
+            </div>
+         </div>
    </main>
    <footer>
 
