challenge part added

--- a/index.html
+++ b/index.html
@@ -49,47 +49,121 @@
    </header>
    <main>
         <!-- first section -->
-         <div class="first-section">
-            <div class="round-text">
-                <h1 class="round-title">Change Your Habits</h1>
-                <p class="round-des">Changing a habit involves consciously altering a routine or behavior to achieve a desired outcome.</p>
-            </div>        
-                <div class="round-card">
-                    <div class="cards">
-                        <img class="round-pic" src="images/image 2.png" alt="">
-                        <h4 class="pic-title">Movement</h4>
-                        <p class="round-des">Movement is a celebration of the body's capabilities.</p>
+         <div class="first">
+            <div class="first-section">
+                <div class="round-text">
+                    <h1 class="round-title">Change Your Habits</h1>
+                    <p class="round-des">Changing a habit involves consciously altering a routine or behavior to achieve a desired outcome.</p>
+                </div>        
+                    <div class="round-card">
+                        <div class="cards">
+                            <img class="round-pic" src="images/image 2.png" alt="">
+                            <h4 class="pic-title">Movement</h4>
+                            <p class="round-des">Movement is a celebration of the body's capabilities.</p>
+                        </div>
+                        <div class="cards">
+                            <img class="round-pic" src="images/image 3.png" alt="">
+                            <h4 class="pic-title">Time</h4>
+                            <p class="round-des">Time is one of life’s most precious and fleeting resources.</p>
+                        </div>
+                        <div class="cards">
+                            <img class="round-pic" src="images/image 4.png" alt="">
+                            <h4 class="pic-title">Practice</h4>
+                            <p class="round-des">Practice is the foundation of growth and mastery. </p>
+                        </div>
+                        <div class="cards">
+                            <img class="round-pic" src="images/image 5.png" alt="">
+                            <h4 class="pic-title">Weight Loss</h4>
+                            <p class="round-des">Weight loss is a journey that requires a combination.</p>
+                        </div>
                     </div>
-                    <div class="cards">
-                        <img class="round-pic" src="images/image 3.png" alt="">
-                        <h4 class="pic-title">Time</h4>
-                        <p class="round-des">Time is one of life’s most precious and fleeting resources.</p>
-                    </div>
-                    <div class="cards">
-                        <img class="round-pic" src="images/image 4.png" alt="">
-                        <h4 class="pic-title">Practice</h4>
-                        <p class="round-des">Practice is the foundation of growth and mastery. </p>
-                    </div>
-                    <div class="cards">
-                        <img class="round-pic" src="images/image 5.png" alt="">
-                        <h4 class="pic-title">Weight Loss</h4>
-                        <p class="round-des">Weight loss is a journey that requires a combination.</p>
-                    </div>
-                </div>
+             </div>
          </div>
         <!-- second section -->
-         <div class="second-section">
-            <div class="run-flex">
-                <div class="run-section">
-                    <h1 class="run-title">Run an Extra <br> Mile Easily</h1>
-                    <p class="run-des">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
-                    <button class="banner-btn">Join Now</button>
-                </div>
-                <div class="run-section run-im">
-                    <img class="run-img" src="images/run.jpg" alt="">
+        <div class="second">
+            <div class="second-section">
+                <div class="run-flex">
+                    <div class="run-section">
+                        <h1 class="run-title">Run an Extra <br> Mile Easily</h1>
+                        <p class="run-des">Running the extra mile" is a phrase that means going beyond what is expected or required. It's about putting in extra effort and striving for excellence.</p>
+                        <button class="banner-btn">Join Now</button>
+                    </div>
+                    <div class="run-section run-im">
+                        <img class="run-img" src="images/run.jpg" alt="">
+                    </div>
                 </div>
             </div>
-         </div>
+        </div>
+        <!-- Challenge part-->
+        <div class="challenge">
+            <div class="motivation">
+                <div>
+                    <h1 class="video-title">Inspiration Videos</h1>
+                    <p class="video-des">Videos that showcase stories of resilience, determination, and personal growth. They can include interviews with people who have faced adversity and triumphed over it, or clips of individuals pushing their limits in physical or mental challenges.</p>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/l78u3rdxoVU?si=jDAWihs_M9EhmJgq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="videos-grid">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/B-v5qO6UvUg?si=U4FABuz1E2hAuGg8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/Sbn18WSKRtE?si=Pny5YwjTASmOc_Tq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/orrjnXWgBQM?si=pkGT_5b6NBNS6SSY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </div>
+            <!--  -->
+        </div>
+        <!--  -->
+        <div class="bmi-text">
+            <h1>BMI Calculator</h1>
+            <p>BMI (Body Mass Index) is a numerical value calculated from a person's height and weight. It is used as an indicator to categorize individuals into different weight status categories, such as underweight, normal weight, overweight, and obesity. </p>
+        </div>
+        <div class="bmi-table-chart">    
+            <div class="bmi-calculate">
+                <div>
+                    <h1 class="bmi-title">BMI Calculator Chart</h1>
+                    <table>
+                        <tr>
+                            <th>BMI</th>
+                            <th>Weight Status</th>
+                        </tr>
+                        <tr>
+                           <td>Below 18.5</td>
+                           <td>Underweight</td>
+                        </tr>
+                        <tr>
+                           <td>18.5 - 24.9</td>
+                           <td>Healthy</td>
+                        </tr>
+                        <tr>
+                           <td>25.0 - 29.9</td>
+                           <td>Overweight</td>
+                        </tr>
+                        <tr>
+                           <td>30.0 - and Above</td>
+                           <td>Obese</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="calculate-text">
+                    <h1 class="bmi-title">Calculate your BMI</h1>
+                    <p class="bmi-des">To calculate BMI for a standard form like mine, we typically need specific measurements such as weight and height. </p>
+                    <div>
+                        <div class="input-flex">
+                            <input type="text" name="" id="" placeholder="Height/cm">
+                            <input type="text" name="" id="" placeholder="Weight/kg">
+                        </div>
+                        <div class="input-flex">
+                            <input type="text" name="" id="" placeholder="Age">
+                            <select name="" id="">
+                                <option value="" >sex</option>
+                            </select>
+                        </div>
+                        <select name="" id="select-it">
+                            <option value="" >Select an activity factor</option>
+                        </select>
+                    </div>
+                    <button class="banner-btn">Calculate</button>
+                </div>
+            </div>
+        </div>
    </main>
    <footer>
 
