image card grid-section added

--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
                 <div>
                     <h1 class="video-title">Inspiration Videos</h1>
                     <p class="video-des">Videos that showcase stories of resilience, determination, and personal growth. They can include interviews with people who have faced adversity and triumphed over it, or clips of individuals pushing their limits in physical or mental challenges.</p>
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/l78u3rdxoVU?si=jDAWihs_M9EhmJgq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/Y5RtQ4cawVk?si=93CYnDB8Bua-5ZUa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <div class="videos-grid">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/B-v5qO6UvUg?si=U4FABuz1E2hAuGg8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/Sbn18WSKRtE?si=Pny5YwjTASmOc_Tq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/orrjnXWgBQM?si=pkGT_5b6NBNS6SSY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/AnDomJbHh2g?si=ymd2Tgc2lzKfHq_A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/gYfSXtK7PO4?si=vsLWguDsAaNGczib" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/V-siUdyJ3Ac?si=mkrF4UOF5nA4TAQ1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </div>
             <!--  -->
@@ -162,6 +162,59 @@
                     </div>
                     <button class="banner-btn">Calculate</button>
                 </div>
+            </div>
+        </div>
+        <!-- fourth section -->
+        <div class="fourth">
+            <div class="team">
+                <h1>Meet Our Team</h1>
+                <p>Our team is composed of talented professionals with diverse skills and experiences.</p>
+            </div>
+            <div class="grid-card">
+               <div class="img-grid-section">
+                    <div class="img-cards">
+                        <img src="images/trainer1.png" alt="">
+                        <div class="img-title">
+                            <h4>Jerome Bell</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="img-cards">
+                        <img src="images/trainer2.png" alt="">
+                        <div class="img-title">
+                            <h4>Cameron Williamson</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="img-cards">
+                        <img src="images/trainer3.png" alt="">
+                        <div class="img-title">
+                            <h4>Darrell Steward</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="img-cards">
+                        <img src="images/trainer4.png" alt="">
+                        <div class="img-title">
+                            <h4>Dianne Russell</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="img-cards">
+                        <img src="images/trainer5.png" alt="">
+                        <div class="img-title">
+                            <h4>Cody Fisher</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="img-cards">
+                        <img src="images/trainer6.png" alt="">
+                        <div class="img-title">
+                            <h4>Theresa Webb</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+               </div>
             </div>
         </div>
    </main>
