--- a/index.html
+++ b/index.html
@@ -219,7 +219,32 @@
         </div>
    </main>
    <footer>
-
+        <div class="foot">
+            <div class="foot-grid">
+                <div class="fitness-text">
+                    <h1 class="foot-title">Fitness</h1>
+                    <p class="foot-des">Fitness refers to the state of being in good health, especially when it comes to physical fitness. It encompasses regular exercise.</p>
+                </div>
+                <div class="get-started">
+                    <h2>Get Started</h2>
+                    <p>Service</p>
+                    <p>Contact Us</p>
+                    <p>Affiliate Program</p>
+                    <p>About Us</p>
+                </div>
+                <div class="get-started">
+                    <h2>Get Started</h2>
+                    <p>Fitness</p>
+                    <p>Platform</p>
+                    <p>Workout Libary</p>
+                    <p>App Design</p>
+                </div>
+            </div>
+            <hr>
+            <div>
+                <p class="copy-right">All right reserved @Fitness 2024</p>
+            </div>
+        </div>
    </footer>
 </body>
 </html>
