added responsive bmi-calculate

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </nav>
             <div class="banner-part">
                 <div class="banner-text">
-                    <h1 class="banner-title">Get body in <span class="shape">shape</span> & stay healthy</h1>
+                    <h1 class="banner-title">Get body in <br> <span class="shape">shape</span> & stay <br> healthy</h1>
                     <p class="banner-des">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
                     <button class="banner-btn">Join Club Now!</button>
                     <button class="banner-btn btn-2">Download App</button>
@@ -117,7 +117,7 @@
         </div>
         <div class="bmi-table-chart">    
             <div class="bmi-calculate">
-                <div>
+                <div class="table-data">
                     <h1 class="bmi-title">BMI Calculator Chart</h1>
                     <table>
                         <tr>
@@ -142,24 +142,25 @@
                         </tr>
                     </table>
                 </div>
-                <div class="calculate-text">
+                 <div class="calculate-text">
                     <h1 class="bmi-title">Calculate your BMI</h1>
                     <p class="bmi-des">To calculate BMI for a standard form like mine, we typically need specific measurements such as weight and height. </p>
                     <div>
                         <div class="input-flex">
                             <input type="text" name="" id="" placeholder="Height/cm">
                             <input type="text" name="" id="" placeholder="Weight/kg">
-                        </div>
-                        <div class="input-flex">
                             <input type="text" name="" id="" placeholder="Age">
                             <select name="" id="">
-                                <option value="" >sex</option>
+                                <option value="" >Sex</option>
+                                <option value="" >Male</option>
+                                <option value="" >Female</option>
+                            </select>
+                            <select name="" id="select-it">
+                                <option value="" >Select an activity factor</option>
+                                <option value="" >Male</option>
+                                <option value="" >Female</option>
                             </select>
                         </div>
-                        <select name="" id="select-it">
-                            <option value="" >Select an activity factor</option>
-                        </select>
-                    </div>
                     <button class="banner-btn">Calculate</button>
                 </div>
             </div>
