exercise section added

--- a/index.html
+++ b/index.html
@@ -94,6 +94,55 @@
                 </div>
             </div>
         </div>
+        <!-- third section -->
+        <div class="third">
+            <div class="exer-text">
+                <h1>Trainings and Exercises</h1>
+                <p>Training and exercises are essential for developing skills, improving physical and mental health, and achieving specific goals.</p>
+            </div>
+            <div class="exercise-images">
+                <div class="exercise-top">
+                    <div class="exercise-card">
+                        <img class="exer-img" src="images/exercise1.jpg" alt="">
+                        <div class="card-img-title c1st">
+                            <p>Squats</p>
+                        </div>
+                    </div>
+                    <div class="exercise-card">
+                        <img class="exer-img" src="images/exercise2.png" alt="">
+                        <div class="card-img-title c2nd">
+                            <p>Push-Ups</p>
+                        </div>
+                    </div>
+                    <div class="exercise-card">
+                        <img class="exer-img" src="images/exercise3.png" alt="">
+                        <div class="card-img-title c3rd">
+                            <p>Plank</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="exercise-bottom">
+                    <div class="exercise-card">
+                        <img class="exer-img" src="images/exercise4.png" alt="">
+                        <div class="card-img-title c4th">
+                            <p> Jumping Jacks</p>
+                        </div>
+                    </div>
+                    <div class="exercise-card">
+                        <img class="exer-img" src="images/exercise5.jpg" alt="">
+                        <div class="card-img-title c5th">
+                            <p>Lunges</p>
+                        </div>
+                    </div>
+                    <div class="exercise-card">
+                        <img class="exer-img" src="images/exercise6.jpg" alt="">
+                        <div class="card-img-title c6th">
+                            <p>Burpees</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Challenge part-->
         <div class="challenge">
             <div class="motivation">
